--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,16 +9,40 @@ services:
     - mysql
   container_name: server-container
   ports:
-   - "8080:8080"
+   - "3030:3030"
   volumes:
    - "./server:/app/src"
   command: "npx nodemon --legacy-watch ./src/server.js"
 
  mysql:
-  image: mysql:5.7.31
-  container_name: database-project
-  ports:
-   - "3306:3306"
-  environment:
-   MYSQL_ROOT_PASSWORD: admin
-   MYSQL_DATABASE: projectDatabase
+    image: mysql:5.7.31
+    container_name: database-project
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: admin
+      MYSQL_DATABASE: projectDatabase
+
+ react-client:
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    build:
+      dockerfile: Dockerfile
+      context: ./frontend/client
+    ports:
+      - "3000:3000"
+    volumes:
+      - /app/node_modules
+      - ./frontend/client:/app
+  
+ adminer:
+      image: adminer:latest
+      restart: unless-stopped
+      ports:
+        - 8000:8080
+      depends_on:
+        - mysql
+      environment:
+        ADMINER_DEFAULT_SERVER: mysql
+  
