--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
  mysql:
     image: mysql:5.7.31
     container_name: database-project
+    volumes:
+      - "./server/database/initialize/setup.sql:/docker-entrypoint-initdb.d/setup.sql"
     ports:
       - "3306:3306"
     environment:
